--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 minrt-sys = { path = "minrt-sys" }
+libplayground = { path = "libplayground" }
 
 [profile.dev]
 panic = "abort"
