--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "minrt-sys/vendor/sdk-seven"]
-	path = minrt-sys/vendor/sdk-seven
-	url = https://github.com/LunarLambda/sdk-seven
+[submodule "gba-rt/runtime"]
+	path = gba-rt/runtime
+	url = https://github.com/sdk-seven/runtime
