--- a/gba-macros/Cargo.toml
+++ b/gba-macros/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
-name = "libplayground"
+name = "gba-macros"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
-gba-macros = { path = "../gba-macros" }
+quote = "1.0"
+proc-macro2 = "1.0"
+
+[dependencies.syn]
+features = ["extra-traits", "full"]
+version = "2.0"
